<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/txtObstacleString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/obstacle"
        android:textSize="17sp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rlDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/txtDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDistanceString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/txtDistance"
            android:text="@string/away"
            android:textSize="17sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlMovement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="30dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/txtMovement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direction"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <!--
        <RelativeLayout
            android:id="@+id/rlDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlDistance"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/txtDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degrees"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/txtDirection"
                android:text="@string/direction"
                android:textSize="17sp" />
        </RelativeLayout>
    -->

    <ListView
        android:id="@+id/deviceList"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="90dp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnShowAvailableDevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/show_available_devices"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnDisconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/disconnect"
        android:textAllCaps="false"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rlSpeed"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/seekBarSpeedFrame"
        android:layout_marginStart="14dp">

        <TextView
            android:id="@+id/txtSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="28sp" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/seekBarSpeedFrame"
        android:layout_width="36dp"
        android:layout_height="190dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:orientation="vertical">

        <SeekBar
            android:id="@+id/seekBarSpeed"
            android:layout_width="200dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:max="7"
            android:min="1"
            android:rotation="270" />
    </FrameLayout>

    <!--
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_marginTop="10dp"
            android:id="@+id/switchPower"
            android:rotation="90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seekBarSpeedFrame"
            android:layout_marginStart="21dp" />

        <TextView
            android:id="@+id/txtFwdRev"
            android:layout_marginStart="22dp"
            android:text="@string/forward"
            android:layout_below="@id/switchPower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPower"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="50dp"
            android:elevation="4dp"
            android:foreground="@mipmap/power_round"
            app:cornerRadius="75dp" />
    -->

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:background="@color/black"
        android:elevation="7dp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:elevation="8dp"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRight"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="80dp"
        android:elevation="4dp"
        android:foreground="@mipmap/right"
        app:cornerRadius="75dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnForward"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="130dp"
        android:layout_marginBottom="130dp"
        android:elevation="4dp"
        android:foreground="@mipmap/forward"
        app:cornerRadius="75dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBackward"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="130dp"
        android:layout_marginBottom="30dp"
        android:elevation="4dp"
        android:foreground="@mipmap/backward"
        app:cornerRadius="75dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLeft"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="80dp"
        android:layout_toStartOf="@id/btnRight"
        android:elevation="4dp"
        android:foreground="@mipmap/left"
        app:cornerRadius="75dp" />

</RelativeLayout>